Downgrade Java API to version 8
Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>